--- a/articles/如何重命名项目.md
+++ b/articles/如何重命名项目.md
@@ -1,15 +1,15 @@
 # 如何重命名项目
 
-### 1. 选中项目
+(1) 选中project，如下图：
 
 ![选择项目](../images/select_project_project_2x.png)
 
-### 2. 选择 View > Utilities > Show File Inspector
+(2) 选择 View > Utilities > Show File Inspector
 
-### 3. 在右侧的“Identity and Type area”，“Name"字段中设置新的项目名，并回车。
+(3) 在右侧的“Identity and Type area”，“Name"字段中设置新的项目名并回车，如下图：
 
 ![设置新的项目名](../images/type_new_project_name_2x.png)
 
-### 4. 在出现的对话框中，选择要重命名的目标项即可。
+(4) 在出现的对话框中，选择要重命名的目标项即可，如下图：
 
 ![选择要重命名的目标项](../images/rename_entire_project_2x.png)
